--- a/app/src/main/res/layout/activity_planner_main.xml
+++ b/app/src/main/res/layout/activity_planner_main.xml
@@ -87,7 +87,13 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <include
         android:id="@+id/bottomNavigation"
