Fixed edit profile.

--- a/app/src/main/res/layout/fragment_add_admin_people.xml
+++ b/app/src/main/res/layout/fragment_add_admin_people.xml
@@ -125,7 +125,7 @@
                     android:orientation="horizontal"/>
 
                 <Button
-                    android:id="@+id/btnEditProfileFragment"
+                    android:id="@+id/btnGoToNextFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
