--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -41,7 +41,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/backToAddEditMain"
+                android:id="@+id/backToHome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_seta_voltar_24dp"
@@ -95,7 +95,7 @@
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/btnEditProfileFragment"
+                android:id="@+id/btnGoToNextFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
