--- a/app/src/main/res/layout/nav_header_nav_main.xml
+++ b/app/src/main/res/layout/nav_header_nav_main.xml
@@ -15,13 +15,13 @@
     android:background="@drawable/side_nav_bar"
     -->
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageViewProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/icons8_login_as_user_100" />
 
     <TextView
         android:id="@+id/navNameText"
@@ -36,5 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle" />
+
 
 </LinearLayout>
