--- a/app/src/main/res/layout/activity_planner_main.xml
+++ b/app/src/main/res/layout/activity_planner_main.xml
@@ -87,13 +87,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </FrameLayout>
+        android:layout_weight="1"/>
 
     <include
         android:id="@+id/bottomNavigation"
