--- a/app/src/main/res/layout/fragment_course_main.xml
+++ b/app/src/main/res/layout/fragment_course_main.xml
@@ -66,7 +66,8 @@
         <LinearLayout
             android:id="@+id/linearLayoutRecycler"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:padding="10dp">
 
