--- a/app/src/main/res/layout-v21/fragment_university_main.xml
+++ b/app/src/main/res/layout-v21/fragment_university_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,16 +37,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="-10dp"
-                    android:text="add/update/remove"
+                    android:text="add/edit/remove"
                     android:textColor="@color/colorBright"
                     android:textSize="14sp" />
-
-                <View
-                    android:id="@+id/divider8"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
 
             </LinearLayout>
 
@@ -67,8 +60,7 @@
             android:id="@+id/linearLayoutRecycler"
             android:layout_width="match_parent"
             android:layout_height="360dp"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textListUniversities"
@@ -83,9 +75,7 @@
                 android:id="@+id/recylcerUniversities"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="6dp"
-                android:background="@drawable/bg_recyclerview"
-                android:padding="6dp" />
+                android:layout_marginTop="6dp" />
 
         </LinearLayout>
 
@@ -93,7 +83,7 @@
             android:id="@+id/linerLayoutAddGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="2dp"
             android:orientation="vertical">
 
             <Button
