--- a/app/src/main/res/layout/lista_recycler_universities.xml
+++ b/app/src/main/res/layout/lista_recycler_universities.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="2dp"
     android:background="@color/colorBackGroundBrown"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBackGroundBrown"
-        android:orientation="horizontal">
+        android:layout_margin="2dp"
+        android:background="#807E57"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="320dp"
