--- a/app/src/main/res/layout/fragment_add_course.xml
+++ b/app/src/main/res/layout/fragment_add_course.xml
@@ -33,7 +33,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/addEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
