--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorLightGray">#B6B9A6</color>
     <color name="colorFont">#b0a62f</color>
     <color name="colorButtonBrown">#84725E</color>
-    <color name="colorButtonGreen">#FC3F6426</color>
+    <color name="colorButtonGreen">#FC547040</color>
+    <color name="colorButtonNewBrown">#5C5410</color>
 
 </resources>
