--- a/app/src/main/res/layout/fragment_add_year.xml
+++ b/app/src/main/res/layout/fragment_add_year.xml
@@ -1,16 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AddUniversityFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".fragment.AddYearFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,20 +25,27 @@
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="University"
+                    android:text="Year"
                     android:textColor="@color/colorGray"
                     android:textSize="40sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="-10dp"
-                    android:text="add/edit/remove"
+                    android:text="add new"
                     android:textColor="@color/colorBright"
                     android:textSize="14sp" />
+
+                <View
+                    android:id="@+id/divider6"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="?android:attr/listDivider" />
 
             </LinearLayout>
 
@@ -57,42 +63,45 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayoutRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="360dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textListUniversities"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="start"
-                android:text="Universities List"
-                android:textSize="14sp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recylcerUniversities"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="6dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linerLayoutAddGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            <Button
-                android:id="@+id/buttonUniversity"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:text="Select a year:"
+                android:textColor="@color/colorGray"
+                android:textSize="14sp" />
+
+            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                android:id="@+id/spinnerYears"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:text="ADD NEW"
+                android:background="@drawable/bg_edit_text"
+                android:dropDownWidth="wrap_content"
+                android:outlineSpotShadowColor="@color/colorGray"
+                android:padding="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"/>
+
+            <Button
+                android:id="@+id/buttonAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:text="ADD"
                 android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
