--- a/app/src/main/res/layout/lista_recycler_years.xml
+++ b/app/src/main/res/layout/lista_recycler_years.xml
@@ -16,39 +16,31 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/yearName"
-                android:layout_width="wrap_content"
+                android:layout_width="345dp"
                 android:layout_height="wrap_content"
                 android:text="yearName"
                 android:textColor="@color/colorBright"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/imageDelete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:layout_weight="0.2"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_delete_white_24dp" />
+
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:layout_weight="0.2"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
-
-        <ImageView
-            android:id="@+id/imageDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:layout_weight="0.2"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_delete_white_24dp" />
     </LinearLayout>
 
 </LinearLayout>
