--- a/app/src/main/res/layout/fragment_add_discipline.xml
+++ b/app/src/main/res/layout/fragment_add_discipline.xml
@@ -32,7 +32,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/addEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -117,30 +117,34 @@
                 android:background="@drawable/bg_edit_text"
                 android:dropDownWidth="wrap_content"
                 android:outlineSpotShadowColor="@color/colorGray"
-                android:padding="10dp" />
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:text="Select a year"
+                android:textColor="@color/colorGray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/disciplineYear"
+                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                    android:id="@+id/spinnerYear"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/bg_edit_text"
-                    android:ems="10"
-                    android:hint="year"
-                    android:inputType="textPersonName"
-                    android:padding="10dp"
-                    android:textColorHint="@color/colorLightGray"
-                    android:textSize="14sp"
-                    android:theme="@style/editTextPadrao" />
+                    android:dropDownWidth="wrap_content"
+                    android:outlineSpotShadowColor="@color/colorGray" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
