Calendar on main screen after logon

--- a/app/src/main/res/layout/app_bar_nav_main.xml
+++ b/app/src/main/res/layout/app_bar_nav_main.xml
@@ -18,6 +18,15 @@
             android:background="@drawable/bg_add_edit_brown"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <devs.mulham.horizontalcalendar.HorizontalCalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:textColorNormal="#5E5E5E"
+            app:textColorSelected="#FFFF"
+            app:selectorColor="#006064"
+            app:selectedDateBackground="@color/datePickedBackground"/>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_nav_main" />
