--- a/app/src/main/res/layout/activity_nav_main.xml
+++ b/app/src/main/res/layout/activity_nav_main.xml
@@ -13,6 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <devs.mulham.horizontalcalendar.HorizontalCalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:selectorColor="#c62828"
+        app:textColorNormal="#bababa"
+        app:textColorSelected="#FFFF" />
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
