--- a/app/src/main/res/layout/content_nav_main.xml
+++ b/app/src/main/res/layout/content_nav_main.xml
@@ -6,24 +6,4 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.NavMainActivity"
-    tools:showIn="@layout/app_bar_nav_main">
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="437dp"
-        android:layout_height="303dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtCards"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CARDS"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:showIn="@layout/app_bar_nav_main"/>
