--- a/app/src/main/res/layout-v21/fragment_add_admin_people.xml
+++ b/app/src/main/res/layout-v21/fragment_add_admin_people.xml
@@ -2,7 +2,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.AddAdminPeopleFragment">
+        tools:context=".fragment.AddStudentFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/addEdit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
@@ -68,14 +68,14 @@
                 android:padding="10dp">
 
                 <EditText
-                    android:id="@+id/nameAdminPeople"
+                    android:id="@+id/adminPeopleFirstName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/bg_edit_text"
                     android:ems="10"
-                    android:hint="admin name"
+                    android:hint="first name"
                     android:inputType="textPersonName"
                     android:padding="10dp"
                     android:textColorHint="@color/colorLightGray"
@@ -83,49 +83,37 @@
                     android:theme="@style/editTextPadrao" />
 
                 <EditText
-                    android:id="@+id/emailAdminPeople"
+                    android:id="@+id/adminPeopleLastName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/bg_edit_text"
                     android:ems="10"
-                    android:hint="admin e-mail"
+                    android:hint="last name"
                     android:inputType="textPersonName"
                     android:padding="10dp"
                     android:textColorHint="@color/colorLightGray"
                     android:textSize="14sp"
                     android:theme="@style/editTextPadrao" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Select an university / course:"
-                    android:textColor="@color/colorGray"
-                    android:textSize="14sp" />
-
-                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
-                    android:id="@+id/spinnerUniversityCourse"
+                <EditText
+                    android:id="@+id/adminPeopleEmail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/bg_edit_text"
-                    android:dropDownWidth="wrap_content"
-                    android:outlineSpotShadowColor="@color/colorGray"
-                    android:padding="10dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"/>
+                    android:ems="10"
+                    android:hint="email"
+                    android:inputType="textPersonName"
+                    android:padding="10dp"
+                    android:textColorHint="@color/colorLightGray"
+                    android:textSize="14sp"
+                    android:theme="@style/editTextPadrao" />
 
                 <Button
-                    android:id="@+id/btnGoToNextFragment"
+                    android:id="@+id/buttonAdminPeople"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
