--- a/app/src/main/res/layout/fragment_add_discipline.xml
+++ b/app/src/main/res/layout/fragment_add_discipline.xml
@@ -23,7 +23,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Discipline"
@@ -100,7 +100,7 @@
                 android:theme="@style/editTextPadrao" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textDiscipline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
