--- a/app/src/main/res/layout/fragment_add_event_type.xml
+++ b/app/src/main/res/layout/fragment_add_event_type.xml
@@ -21,7 +21,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/textFragmentName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Event Type"
