--- a/app/src/main/res/layout/fragment_add_year.xml
+++ b/app/src/main/res/layout/fragment_add_year.xml
@@ -22,7 +22,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Year"
@@ -69,7 +69,7 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textDiscipline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
