--- a/app/src/main/res/layout/fragment_user_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_user_profile_edit.xml
@@ -23,7 +23,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Edit User Profile"
