--- a/app/src/main/res/layout/lista_recycler_universities.xml
+++ b/app/src/main/res/layout/lista_recycler_universities.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="nameUni"
-                android:textColor="@color/colorBright"
+                android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="acronUni"
-                android:textColor="@color/colorBright" />
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
         <ImageView
